@@ -60,7 +60,7 @@ table_end (void)
 
 
 static void
-table_add (int x)
+table_add (uint8_t x)
 {
   if (theNum % 16 == 0)
     printf ("\n    ");
@@ -87,18 +87,16 @@ update_zns_flags (int result, uint8_t sreg)
 static void
 gen_flag_update_tables (void)
 {
-  int i, result, sreg;
-
   printf ("// Auto-generated file. Do not edit.\n"
           "// Generated by : gen-flag-tables\n"
           "// Included by  : avrtest.c\n");
 
   // build flag update table for 8 bit addition
   table_start ("flag_update_table_add8", 8192);
-  for (i = 0; i < 8192; i++)
+  for (int i = 0; i < 8192; i++)
     {
-      result = i & FUT_ADD8_RES;
-      sreg = 0;
+      int result = i & FUT_ADD8_RES;
+      uint8_t sreg = 0;
       if ((!(i & FUT_ADD8_V1_80) == !(i & FUT_ADD8_V2_80))
           && (!(result & 0x80) != !(i & FUT_ADD8_V1_80)))
         sreg |= FLAG_V;
@@ -115,10 +113,10 @@ gen_flag_update_tables (void)
 
   // build flag update table for 8 bit subtraction
   table_start ("flag_update_table_sub8", 8192);
-  for (i = 0; i < 8192; i++)
+  for (int i = 0; i < 8192; i++)
     {
-      result = i & FUT_SUB8_RES;
-      sreg = 0;
+      int result = i & FUT_SUB8_RES;
+      uint8_t sreg = 0;
       if ((!(result & 0x80) == !(i & FUT_SUB8_V2_80))
           && (!(i & FUT_SUB8_V1_80) != !(i & FUT_SUB8_V2_80)))
         sreg |= FLAG_V;
@@ -135,10 +133,10 @@ gen_flag_update_tables (void)
 
   // build flag update table for 8 bit rotation
   table_start ("flag_update_table_ror8", 512);
-  for (i = 0; i < 512; i++)
+  for (int i = 0; i < 512; i++)
     {
-      result = i >> 1;
-      sreg = 0;
+      int result = i >> 1;
+      uint8_t sreg = 0;
       if (i & 0x01)
         sreg |= FLAG_C;
       if (((result & 0x80) != 0) != ((sreg & FLAG_C) != 0))
@@ -150,9 +148,9 @@ gen_flag_update_tables (void)
 
   // build flag update table for increment
   table_start ("flag_update_table_inc", 256);
-  for (i = 0; i < 256; i++)
+  for (int i = 0; i < 256; i++)
     {
-      sreg = (i == 0x80) ? FLAG_V : 0;
+      uint8_t sreg = (i == 0x80) ? FLAG_V : 0;
       sreg = update_zns_flags (i, sreg);
       table_add (sreg);
     }
@@ -160,9 +158,9 @@ gen_flag_update_tables (void)
 
   // build flag update table for decrement
   table_start ("flag_update_table_dec", 256);
-  for (i = 0; i < 256; i++)
+  for (int i = 0; i < 256; i++)
     {
-      sreg = (i == 0x7F) ? FLAG_V : 0;
+      uint8_t sreg = (i == 0x7F) ? FLAG_V : 0;
       sreg = update_zns_flags (i, sreg);
       table_add (sreg);
     }
@@ -170,9 +168,9 @@ gen_flag_update_tables (void)
 
   // build flag update table for logical operations
   table_start ("flag_update_table_logical", 256);
-  for (i = 0; i < 256; i++)
+  for (int i = 0; i < 256; i++)
     {
-      sreg = update_zns_flags (i, 0);
+      uint8_t sreg = update_zns_flags (i, 0);
       table_add (sreg);
     }
   table_end ();
